syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "StiktifyShopBackend.Product";


service ProductGrpc{
	rpc GetAll(Empty) returns (Products);
	rpc GetAllOfShop(Id) returns (Products);
	rpc GetAllOfCategory(Id) returns (Products);
	rpc GetAllImage(Id) returns (Links);
	rpc GetOne(Id) returns (Product);
	rpc GetRangePrice(Id) returns (RangePrice);
	rpc Create(CreateProduct) returns (Response);
	rpc Update(Product) returns (Response);
	rpc Delete(Id) returns (Response);
	rpc DeleteAllOfShop(Id) returns (Response);
	rpc DeleteMany(Ids) returns (Response);
}

message Empty{}

message Product{
	google.protobuf.StringValue Id = 1;
	google.protobuf.StringValue ShopId = 2;
	google.protobuf.StringValue Name = 3;
	google.protobuf.StringValue Thumbnail = 4;
	google.protobuf.StringValue Description = 5;
	google.protobuf.StringValue RangePrice = 6;
	double RatingPoint = 7;
	int32 RatingTurn = 8;
	int32 Order = 9;
	bool IsActive = 10;
	google.protobuf.Timestamp CreateAt = 11;
	google.protobuf.Timestamp UpdateAt = 12;
	google.protobuf.StringValue CategoryIds = 13;
}

message CreateProduct{
	string ShopId = 1;
	string Name = 2;
	string Thumbnail = 3;
	string Description = 4;
	google.protobuf.StringValue CategoryIds = 5;
}

message Id{
	string SearchId = 1;
}

message Ids{
	repeated Id Item = 1;
}

message Link{
	string ImageUri = 1;
}

message Links{
	repeated Link Item = 1;
}

message RangePrice{
	double Min = 1;
	double Max = 2;
}

message Products{
	repeated Product Item = 1;
}

message Response{
	int32 StatusCode = 1;
	google.protobuf.StringValue Message = 2;
}